fixed spacing in other tabs

--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ div.d {
 }
 div.e {
 	color:#000000 ;
-	margin-top: 200px;
+	margin-top: 150px;
 	text-align: center;
 }
 .avatar {
